Proteomics with Python

--- a/Phosphoproteomics/Volcano&Clustering.ipynb
+++ b/Phosphoproteomics/Volcano&Clustering.ipynb
@@ -380,7 +380,7 @@
    "id": "6f2d9d1e",
    "metadata": {},
    "source": [
-    "## PCA"
+    "## Clustering Analysis"
    ]
   },
   {
@@ -400,14 +400,126 @@
     "\n",
     "\n",
     "\n",
+    "def k_finder(data, max_k = 20):\n",
+    "    \"\"\"\n",
+    "    Calculates inertia for a specific range of clusters to find the\n",
+    "    best number to assign to k in k-means clustering algorithm\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data: Pandas dataframe, data that is ready for cluster analysis\n",
+    "    max_k: Int, maximum number of clusters that is going to be tested.\n",
+    "           20, by default   \n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A matplotlib figure\n",
+    "    \"\"\"\n",
+    "    k_num = range(2, max_k)\n",
+    "    inertia = []\n",
+    "    \n",
+    "    for k in k_num:\n",
+    "        kmeans = KMeans(n_clusters = k, randoms_state = 69)\n",
+    "        km = kmeans.fit(scaled_data.values)\n",
+    "        inertia.append(km.inertia_)\n",
+    "        \n",
+    "    fig, ax = plt.subplots(1, figsize = (15, 6))\n",
+    "    xax = np.arange(len(k_num))\n",
+    "    ax.plot(xax, inertia)\n",
+    "    ax.set_xticks(xax)\n",
+    "    ax.set_xticklabels(k_num)\n",
+    "    ax.set_yticklabels(np.array(inertia).round(1)[::-1], fontsize = 15)\n",
+    "    plt.xlabel(\"Number of Clusters\", fontsize = 20)\n",
+    "    plt.ylabel(\"Inertia Score\", fontsize = 20)\n",
+    "    plt.title(\"Inertia per K\", fontsize = 20)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
+    "def k_cluster(data, cluster_num = 2):\n",
+    "    \"\"\"\n",
+    "    Accepts the data prepared for clustering and fit the kmenas clustering\n",
+    "    algorithm to it\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data: Pandas dataframe, data that is ready for cluster analysis\n",
+    "    cluster_num: Int, best number of cluster. 2, by default\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    \"\"\"\n",
+    "    kmeans= KMeans(n_clusters = cluster_num, random_state = 69)\n",
+    "    predicted = kmeans.fit_predict(scaled_data.values)\n",
+    "    un, counts = np.unique(predicted, return_counts = True)\n",
+    "    count = counts.reshape(1, cluster_num)\n",
+    "    cols = [\"Cluster \" + str(x) for x in range(1, cluster_num + 1)]\n",
+    "    return pd.DataFrame(count, columns = cols)\n",
     "\n",
-    "def pca_initiation(sub_data):\n",
+    "\n",
+    "def optimized_kcluster(data, n_comp, k_clust):\n",
+    "    \"\"\"\n",
+    "    Optimazation of K means clustering with PCA\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data: Pandas datframe, data prepared for clustering analysis\n",
+    "    n_comp: Int, the ideal number for principal components provided from best_comp function\n",
+    "    k_clust: Int, best number of cluster provided by k_finder function\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    Pandas dataframe of optimized k means clustering analysis\n",
+    "    \"\"\"\n",
+    "    pca = PCA(n_components = n_comp, random_state = 42)\n",
+    "    pca_mod = pca.fit_transform(data)\n",
+    "    kmean = KMeans(n_clusters = k_clust, random_state = 69)\n",
+    "    km = kmean.fit_predict(pca_mod)\n",
+    "    un, counts = np.unique(km, return_counts = True)\n",
+    "    count = counts.reshape(1, k_clust)\n",
+    "    cols = [\"Cluster \" + str(x) for x in range(1, k_clust + 1)]\n",
+    "    return pd.DataFrame(count, columns = cols)\n",
+    "\n",
+    "\n",
+    "def best_comp(data):\n",
+    "    \"\"\"\n",
+    "    Works out what is the ideal number of component for PCA analysis\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data: Pandas datframe, data prepared for clustering analysis\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A matplotlib plot\n",
+    "    \"\"\"\n",
+    "    comp_num = data.shape[1]\n",
+    "    pca = PCA(n_components = comp_num, random_state = 42)\n",
+    "    pca_mod = pca.fit_transform(data.value)\n",
+    "    total_var = sum(pca.explained_variance_)\n",
+    "    var_95 = total_var * 0.95\n",
+    "    print(f\"Total Variance: {round(total_var, 2)}\")\n",
+    "    print()\n",
+    "    \n",
+    "    values = zip(range(0, comp_num), pca.explained_variance_)\n",
+    "    report = pd.DataFrame(values, columns = [\"PCA Components\", \"Explained Variance\"])\n",
+    "    print(report)\n",
+    "    print()\n",
+    "\n",
+    "    plt.figure(figsize = (15, 7))\n",
+    "    plt.plot(pca.explained_variance_ratio_, linewidth = 2.5, c = \"b\")\n",
+    "    plt.xlabel(\"Number of Components\", fontsize = 15)\n",
+    "    plt.ylabel(\"Explained Ratio\", fontsize = 15)\n",
+    "    plt.show()\n",
+    "    \n",
+    "\n",
+    "def pca_initiation(sub_data, n_comp):\n",
     "    \"\"\"\n",
     "    Accepts data for PCA, scale the data and fits the algorithm to it\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
     "    sub_data: Pandas dataframe required for PCA analysis\n",
+    "    n_comp: Int, the ideal number for principal components provided from best_comp function\n",
     "    \n",
     "    Returns\n",
     "    ----------\n",
@@ -416,10 +528,8 @@
     "                  of a articular principal component (eigenvector) with total eigenvalues.\n",
     "    labels: List, labels for components of the analysis to be used for plotting in scree_plot function\n",
     "    \"\"\"\n",
-    "    scaled_data = scale(sub_data.T)\n",
-    "    pca_init = PCA()\n",
-    "    pca_init.fit(scaled_data)\n",
-    "    pca_data_final = pca_init.transform(scaled_data)\n",
+    "    pca_init = PCA(n_components = n_comp, random_state = 42)\n",
+    "    pca_data_final = pca_init.fit_transform(sub_data)\n",
     "    per_var_info = np.round(pca_init.explained_variance_ratio_ * 100, decimals = 1)\n",
     "    labels = [\"PC\" + str(x) for x in range(1, len(per_var_info) + 1)]\n",
     "    return pca_data_final, per_var_info, labels\n",
