--- a/Phosphoproteomics/Volcano&Clustering.ipynb
+++ b/Phosphoproteomics/Volcano&Clustering.ipynb
@@ -494,7 +494,7 @@
     "    \"\"\"\n",
     "    comp_num = data.shape[1]\n",
     "    pca = PCA(n_components = comp_num, random_state = 42)\n",
-    "    pca_mod = pca.fit_transform(data.value)\n",
+    "    pca_mod = pca.fit_transform(data.values)\n",
     "    total_var = sum(pca.explained_variance_)\n",
     "    var_95 = total_var * 0.95\n",
     "    print(f\"Total Variance: {round(total_var, 2)}\")\n",
