--- a/Phosphoproteomics/Volcano&Clustering.ipynb
+++ b/Phosphoproteomics/Volcano&Clustering.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "def volcano_dataset_prep(index_col, t_test, log_fc, fdr_col, heatmap_data = None):\n",
     "    \"\"\"\n",
-    "    Separates the columns requred for making a volcano plot.\n",
+    "    Separates the columns required for making a volcano plot.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
