--- a/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
+++ b/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
@@ -124,7 +124,7 @@
     "        img = cv2.imread(image, 1)\n",
     "        lab = cv2.cvtColor(img, cv2.COLOR_BGR2LAB)\n",
     "        B, G, R = cv2.split(lab)\n",
-    "        clahe = cv2.createCLAHE(clipLimit=3.0, tileGridSize=(8,8))\n",
+    "        clahe = cv2.createCLAHE(clipLimit = 3.0, tileGridSize = (8,8))\n",
     "        cl = clahe.apply(B)\n",
     "        final = cv2.cvtColor(cv2.merge((cl, G, R)), cv2.COLOR_LAB2BGR)\n",
     "        new_path = contrast_img_directory + \"/\" + os.listdir(dye)[counter]\n",
@@ -171,7 +171,7 @@
     "        if merging.lower().strip() == \"b_g_merged\":\n",
     "            dapi = [cv2.imread(img, 0) for img in glob.glob(dapi_path)]\n",
     "            fitc = [cv2.imread(img, 0) for img in glob.glob(fitc_path)]\n",
-    "            texase = np.zeros_like(dapi[0])\n",
+    "            texase = np.zeros_like(dapi[0], dtype = np.unit16)\n",
     "            new_path = \"B_G_Merged\"\n",
     "            os.mkdir(new_path)\n",
     "\n",
@@ -182,7 +182,7 @@
     "\n",
     "        elif merging.lower().strip() == \"b_r_merged\":\n",
     "            dapi = [cv2.imread(img, 0) for img in glob.glob(dapi_path)]\n",
-    "            fitc = np.zeros_like(dapi[0]) \n",
+    "            fitc = np.zeros_like(dapi[0], dtype = np.unit16) \n",
     "            texas = [cv2.imread(img, 0) for img in glob.glob(texas_path)]\n",
     "            new_path = \"B_R_Merged\"\n",
     "            os.mkdir(new_path)\n",
@@ -193,7 +193,7 @@
     "\n",
     "        elif merging.lower().strip() == \"r_g_merged\":\n",
     "            fitc = [cv2.imread(img, 0) for img in glob.glob(fitc_path)]\n",
-    "            dapi = np.zeros_like(fitc[0])\n",
+    "            dapi = np.zeros_like(fitc[0], dtype = np.unit16)\n",
     "            texas = [cv2.imread(img, 0) for img in glob.glob(texas_path)]\n",
     "            new_path = \"R_G_Merged\"\n",
     "            os.mkdir(new_path)\n",
