--- a/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
+++ b/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
@@ -121,7 +121,7 @@
     "    counter = 0\n",
     "    \n",
     "    for image in glob.glob(path):\n",
-    "        img = cv2.imread(image, 1)\n",
+    "        img = cv2.imread(image, cv2.IMREAD_UNCHANGED)\n",
     "        lab = cv2.cvtColor(img, cv2.COLOR_BGR2LAB)\n",
     "        B, G, R = cv2.split(lab)\n",
     "        clahe = cv2.createCLAHE(clipLimit = 3.0, tileGridSize = (8,8))\n",
@@ -169,8 +169,8 @@
     "    try:\n",
     "\n",
     "        if merging.lower().strip() == \"b_g_merged\":\n",
-    "            dapi = [cv2.imread(img, 0) for img in glob.glob(dapi_path)]\n",
-    "            fitc = [cv2.imread(img, 0) for img in glob.glob(fitc_path)]\n",
+    "            dapi = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(dapi_path)]\n",
+    "            fitc = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(fitc_path)]\n",
     "            texase = np.zeros_like(dapi[0], dtype = np.unit16)\n",
     "            new_path = \"B_G_Merged\"\n",
     "            os.mkdir(new_path)\n",
@@ -181,9 +181,9 @@
     "\n",
     "\n",
     "        elif merging.lower().strip() == \"b_r_merged\":\n",
-    "            dapi = [cv2.imread(img, 0) for img in glob.glob(dapi_path)]\n",
+    "            dapi = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(dapi_path)]\n",
     "            fitc = np.zeros_like(dapi[0], dtype = np.unit16) \n",
-    "            texas = [cv2.imread(img, 0) for img in glob.glob(texas_path)]\n",
+    "            texas = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(texas_path)]\n",
     "            new_path = \"B_R_Merged\"\n",
     "            os.mkdir(new_path)\n",
     "\n",
@@ -192,9 +192,9 @@
     "                cv2.imwrite(new_path + \"/\" + \"Merged_\" + str(num) + \".tif\", merged)\n",
     "\n",
     "        elif merging.lower().strip() == \"r_g_merged\":\n",
-    "            fitc = [cv2.imread(img, 0) for img in glob.glob(fitc_path)]\n",
+    "            fitc = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(fitc_path)]\n",
     "            dapi = np.zeros_like(fitc[0], dtype = np.unit16)\n",
-    "            texas = [cv2.imread(img, 0) for img in glob.glob(texas_path)]\n",
+    "            texas = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(texas_path)]\n",
     "            new_path = \"R_G_Merged\"\n",
     "            os.mkdir(new_path)\n",
     "\n",
@@ -204,9 +204,9 @@
     "\n",
     "\n",
     "        elif merging.lower().strip() == \"r_g_b_merged\":\n",
-    "            dapi = [cv2.imread(img, 0) for img in glob.glob(dapi_path)]\n",
-    "            fitc = [cv2.imread(img, 0) for img in glob.glob(fitc_path)]\n",
-    "            texas = [cv2.imread(img, 0) for img in glob.glob(texas_path)]\n",
+    "            dapi = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(dapi_path)]\n",
+    "            fitc = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(fitc_path)]\n",
+    "            texas = [cv2.imread(img, cv2.IMREAD_UNCHANGED) for img in glob.glob(texas_path)]\n",
     "            new_path = \"R_G_B_Merged\"\n",
     "            os.mkdir(new_path)\n",
     "\n",
