--- a/IN Cell Analyzer 2200 Image Processing/Python/OneClassModel.ipynb
+++ b/IN Cell Analyzer 2200 Image Processing/Python/OneClassModel.ipynb
@@ -156,12 +156,12 @@
     "# Option A: traditional features\n",
     "def extract_traditional_features(img):\n",
     "    gray = rgb2gray(img)\n",
-    "    h = hog(gray, pixels_per_cell=(16,16), cells_per_block=(2,2), feature_vector=True)\n",
+    "    h = hog(gray, pixels_per_cell = (16,16), cells_per_block = (2,2), feature_vector = True)\n",
     "    return h\n",
     "\n",
     "# Option B: deep features via pre-trained VGG16\n",
-    "base_vgg = VGG16(weights='imagenet', include_top=False, input_shape=(img_h, img_w, 3))\n",
-    "feat_model = Model(inputs=base_vgg.input, outputs=base_vgg.get_layer('block3_conv3').output)\n",
+    "base_vgg = VGG16(weights = 'imagenet', include_top = False, input_shape = (img_h, img_w, 3))\n",
+    "feat_model = Model(inputs=base_vgg.input, outputs = base_vgg.get_layer('block3_conv3').output)\n",
     "\n",
     "def extract_deep_features(img):\n",
     "    img = img[np.newaxis]  # batch dimension\n",
@@ -180,10 +180,10 @@
     "X_feats = np.stack(feats)\n",
     "\n",
     "models = {\n",
-    "    'ocsvm': OneClassSVM(kernel='rbf', gamma='auto', nu=0.1).fit(X_feats),\n",
-    "    'lof': LocalOutlierFactor(n_neighbors=20, novelty=True).fit(X_feats),\n",
-    "    'iforest': IsolationForest(contamination=0.05).fit(X_feats),\n",
-    "    'cov': EllipticEnvelope(contamination=0.05).fit(X_feats),\n",
+    "    'ocsvm': OneClassSVM(kernel = 'rbf', gamma = 'auto', nu = 0.1).fit(X_feats),\n",
+    "    'lof': LocalOutlierFactor(n_neighbors = 20, novelty = True).fit(X_feats),\n",
+    "    'iforest': IsolationForest(contamination = 0.05).fit(X_feats),\n",
+    "    'cov': EllipticEnvelope(contamination = 0.05).fit(X_feats),\n",
     "}"
    ]
   },
@@ -234,8 +234,8 @@
    "outputs": [],
    "source": [
     "# 1️⃣ Extract features via pre-trained VGG16 block3_conv3\n",
-    "base_vgg = VGG16(weights='imagenet', include_top=False)\n",
-    "feat_model = Model(inputs=base_vgg.input, outputs=base_vgg.get_layer('block3_conv3').output)\n",
+    "base_vgg = VGG16(weights = 'imagenet', include_top=False)\n",
+    "feat_model = Model(inputs = base_vgg.input, outputs = base_vgg.get_layer('block3_conv3').output)\n",
     "\n",
     "def extract_features(img):\n",
     "    img = img[np.newaxis]\n",
@@ -284,11 +284,11 @@
    "source": [
     "# Load Set 1 (normal training images)\n",
     "train_paths = [...]  # List of 384 paths to normal images\n",
-    "X_train = np.array([imread(img).astype('float32') / 65535.0 for img in train_paths])  # Normalize 16-bit to [0, 1]\n",
+    "X_train = np.array([cv2.imread(img).astype('float32') / 65535.0 for img in train_paths])  # Normalize 16-bit to [0, 1]\n",
     "\n",
     "# Load Set 2 (experimental images: control + anomalies)\n",
     "test_paths = [...]  # List of 384 paths to experimental images\n",
-    "X_test = np.array([imread(img).astype('float32') / 65535.0 for img in test_paths])"
+    "X_test = np.array([cv2.imread(img).astype('float32') / 65535.0 for img in test_paths])"
    ]
   },
   {
@@ -299,11 +299,11 @@
    "source": [
     "# Load Set 1 (normal training images)\n",
     "train_paths = [...]  # List of 384 paths to normal images\n",
-    "X_train = np.array([imread(img).astype('float32') / 65535.0 for img in train_paths])  # Normalize 16-bit to [0, 1]\n",
+    "X_train = np.array([cv2.imread(img).astype('float32') / 65535.0 for img in train_paths])  # Normalize 16-bit to [0, 1]\n",
     "\n",
     "# Load Set 2 (experimental images: control + anomalies)\n",
     "test_paths = [...]  # List of 384 paths to experimental images\n",
-    "X_test = np.array([imread(img).astype('float32') / 65535.0 for img in test_paths])"
+    "X_test = np.array([cv2.imread(img).astype('float32') / 65535.0 for img in test_paths])"
    ]
   },
   {
@@ -337,9 +337,9 @@
    "outputs": [],
    "source": [
     "# Load pre-trained VGG16 for perceptual loss\n",
-    "vgg = VGG16(weights='imagenet', include_top=False, input_shape=(X_train.shape[1], X_train.shape[2], 3))\n",
+    "vgg = VGG16(weights = 'imagenet', include_top = False, input_shape=(X_train.shape[1], X_train.shape[2], 3))\n",
     "vgg.trainable = False\n",
-    "perceptual_model = models.Model(inputs=vgg.input, outputs=vgg.get_layer('block3_conv3').output)\n",
+    "perceptual_model = models.Model(inputs = vgg.input, outputs=vgg.get_layer('block3_conv3').output)\n",
     "\n",
     "def perceptual_loss(y_true, y_pred):\n",
     "    mse = losses.mse(y_true, y_pred)  # Pixel-wise error\n",
@@ -348,7 +348,7 @@
     "    perc_loss = losses.mse(true_features, pred_features)  # Feature-wise error\n",
     "    return mse + 0.1 * perc_loss  # Combined loss\n",
     "\n",
-    "autoencoder.compile(optimizer='adam', loss=perceptual_loss)"
+    "autoencoder.compile(optimizer = 'adam', loss=perceptual_loss)"
    ]
   },
   {
@@ -359,9 +359,9 @@
    "source": [
     "history = autoencoder.fit(\n",
     "    X_train, X_train,  # Input = Target (self-supervised)\n",
-    "    epochs=50,\n",
-    "    batch_size=8,\n",
-    "    shuffle=True\n",
+    "    epochs = 50,\n",
+    "    batch_size = 8,\n",
+    "    shuffle = True\n",
     ")"
    ]
   },
