--- a/IN Cell Analyzer 2200 Image Processing/Python/OneClassModel.ipynb
+++ b/IN Cell Analyzer 2200 Image Processing/Python/OneClassModel.ipynb
@@ -27,6 +27,7 @@
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "from sklearn.mixture import GaussianMixture\n",
     "from sklearn.covariance import EllipticEnvelope\n",
+    "from sklearn.preprocessing import PowerTransformer\n",
     "\n",
     "from scipy.stats import entropy\n",
     "\n",
@@ -233,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1️⃣ Extract features via pre-trained VGG16 block3_conv3\n",
+    "# Extract features via pre-trained VGG16 block3_conv3\n",
     "base_vgg = VGG16(weights = 'imagenet', include_top=False)\n",
     "feat_model = Model(inputs = base_vgg.input, outputs = base_vgg.get_layer('block3_conv3').output)\n",
     "\n",
@@ -244,22 +245,27 @@
     "X_train_feats = np.stack([extract_features(img) for img in X_train])\n",
     "X_test_feats = np.stack([extract_features(img) for img in X_test])\n",
     "\n",
-    "# 2️⃣ Fit initial GMM on normal features\n",
+    "# Transform features to be more Gaussian\n",
+    "pt = PowerTransformer(method='yeo-johnson', standardize=True)\n",
+    "X_train_feats = pt.fit_transform(X_train_feats)\n",
+    "X_test_feats = pt.transform(X_test_feats)\n",
+    "\n",
+    "# Fit initial GMM on normal features\n",
     "n_components = 5  # adjust based on data\n",
     "gmm = GaussianMixture(n_components=n_components, covariance_type='full', random_state=0)\n",
     "gmm.fit(X_train_feats)\n",
     "\n",
-    "# 3️⃣ Compute entropy of cluster assignments to guide noise init\n",
+    "# Compute entropy of cluster assignments to guide noise init\n",
     "probs = gmm.predict_proba(X_train_feats)  # shape (n_samples, n_components)\n",
     "sample_entropy = entropy(probs.T)         # per-sample entropy\n",
     "noise_data = X_train_feats[np.argsort(sample_entropy)[-int(0.05*len(sample_entropy)):]]\n",
     "\n",
-    "# 4️⃣ Add a dedicated noise component initialized from high-entropy data\n",
+    "# Add a dedicated noise component initialized from high-entropy data\n",
     "X_aug = np.vstack([X_train_feats, noise_data])\n",
     "gmm2 = GaussianMixture(n_components=n_components+1, covariance_type='full', random_state=0)\n",
     "gmm2.fit(X_aug)\n",
     "\n",
-    "# 5️⃣ Anomaly detection: test samples with low likelihood cluster\n",
+    "# Anomaly detection: test samples with low likelihood cluster\n",
     "log_probs = gmm2.score_samples(X_test_feats)\n",
     "threshold = np.percentile(gmm2.score_samples(X_train_feats), 5)\n",
     "anomalies = log_probs < threshold\n",
